--- a/src/main/resources/paciente.fxml
+++ b/src/main/resources/paciente.fxml
@@ -8,6 +8,6 @@
 
 <VBox xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="MedicalChat.app.controlador.Paciente">
+            fx:controller="MedicalChat.app.controlador.PacienteControlador">
 
 </VBox>
