--- a/src/main/resources/medico.fxml
+++ b/src/main/resources/medico.fxml
@@ -5,8 +5,8 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MedicalChat.app.controlador.MedicoControlador">
-    <HBox alignment="CENTER_RIGHT" style="-fx-background-color: #101e5a; -fx-min-height: 96.0">
+<VBox prefHeight="591.0" prefWidth="942.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MedicalChat.app.controlador.MedicoControlador">
+    <HBox alignment="CENTER_RIGHT" prefWidth="860.0" style="-fx-background-color: #101e5a; -fx-min-height: 96.0">
         <Label fx:id="nombreUsuario" textFill="#f7f8f9">
          <HBox.margin>
             <Insets right="24.0" />
@@ -22,5 +22,36 @@
             <Font name="System Bold" size="14.0" />
          </font></Button>
     </HBox>
+   <HBox alignment="CENTER_RIGHT" prefHeight="455.0" prefWidth="942.0">
+      <children>
+         <TitledPane prefHeight="423.0" prefWidth="361.0" text="Paciente XXXXXXX">
+            <content>
+               <VBox alignment="BOTTOM_CENTER" prefHeight="200.0" prefWidth="100.0">
+                  <children>
+                     <HBox alignment="CENTER" prefHeight="33.0" prefWidth="341.0">
+                        <children>
+                           <TextField prefHeight="26.0" prefWidth="275.0" promptText="Ingresa un mensaje..." style="-fx-border-color: #0E4D92; -fx-border-radius: 10; -fx-background-radius: 10;">
+                              <HBox.margin>
+                                 <Insets right="10.0" />
+                              </HBox.margin>
+                           </TextField>
+                           <Button alignment="CENTER" mnemonicParsing="false" style="-fx-background-color: #0E4D92; -fx-border-radius: 10; -fx-background-radius: 10;" text="Enviar" textFill="WHITE">
+                              <font>
+                                 <Font name="System Bold" size="12.0" />
+                              </font></Button>
+                        </children>
+                     </HBox>
+                  </children>
+               </VBox>
+            </content>
+            <font>
+               <Font size="14.0" />
+            </font>
+         </TitledPane>
+      </children>
+      <padding>
+         <Insets left="20.0" right="20.0" />
+      </padding>
+   </HBox>
 
 </VBox>
