--- a/src/main/resources/paciente.fxml
+++ b/src/main/resources/paciente.fxml
@@ -59,7 +59,7 @@
                     <Insets bottom="8.0" left="16.0" right="16.0" top="16.0" />
                 </VBox.margin>
             </ImageView>
-            <Button mnemonicParsing="false" prefHeight="32.0" prefWidth="108.0" style="-fx-background-color: #101e5a; -fx-text-fill: white" text="Iniciar Chat" BorderPane.alignment="CENTER">
+            <Button onAction="#iniciarChat" mnemonicParsing="false" prefHeight="32.0" prefWidth="108.0" style="-fx-background-color: #101e5a; -fx-text-fill: white" text="Iniciar Chat" BorderPane.alignment="CENTER">
                 <BorderPane.margin>
                     <Insets bottom="8.0" left="16.0" right="16.0" top="8.0" />
                 </BorderPane.margin>
