--- a/src/main/resources/chatDoctor.fxml
+++ b/src/main/resources/chatDoctor.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MedicalChat.app.controlador.ChatControlador">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MedicalChat.app.controlador.ChatDoctorControlador">
     <children>
         <Button fx:id="botonEnviar" layoutX="504" layoutY="338" onAction="#enviarMensaje" prefHeight="26.0" prefWidth="66.0" style="-fx-background-color: #101e5a; -fx-text-fill: white" text="Enviar" />
         <TextField fx:id="mensaje" layoutX="30" layoutY="338" prefHeight="26" prefWidth="466.0" />
