--- a/src/main/resources/medico.fxml
+++ b/src/main/resources/medico.fxml
@@ -14,20 +14,27 @@
          <font>
             <Font name="System Bold" size="32.0" />
          </font></Label>
-        <Button id="btnCerrarSesion" minHeight="32.0" minWidth="130.0" onAction="#cerrarSesion" style="-fx-background-color: #f7f8f9; -fx-text-fill: black" text="Cerrar sesión">
+        <Button id="btnCerrarSesion" minHeight="32.0" minWidth="130.0" onAction="#inicializarConexion" style="-fx-background-color: #f7f8f9; -fx-text-fill: black" text="Conectarse">
             <HBox.margin>
                 <Insets bottom="24.0" right="24.0" top="24.0" />
             </HBox.margin>
          <font>
             <Font name="System Bold" size="14.0" />
          </font></Button>
+      <Button id="btnCerrarSesion" layoutX="798.0" layoutY="42.0" minHeight="32.0" minWidth="130.0" onAction="#cerrarSesion" style="-fx-background-color: #f7f8f9; -fx-text-fill: black" text="Cerrar sesión">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Button>
     </HBox>
+    <fx:include source="chatDoctor.fxml"></fx:include>
    <HBox alignment="CENTER_RIGHT" prefHeight="455.0" prefWidth="942.0">
       <children>
          <TitledPane prefHeight="423.0" prefWidth="361.0" text="Paciente XXXXXXX">
             <content>
                <VBox alignment="BOTTOM_CENTER" prefHeight="200.0" prefWidth="100.0">
                   <children>
+                     <TextArea fx:id="mensajesChat" prefHeight="367.0" prefWidth="338.0" />
                      <HBox alignment="CENTER" prefHeight="33.0" prefWidth="341.0">
                         <children>
                            <TextField prefHeight="26.0" prefWidth="275.0" promptText="Ingresa un mensaje..." style="-fx-border-color: #0E4D92; -fx-border-radius: 10; -fx-background-radius: 10;">
