--- a/src/main/resources/medico.fxml
+++ b/src/main/resources/medico.fxml
@@ -27,38 +27,6 @@
          </font>
       </Button>
     </HBox>
-    <fx:include source="chatDoctor.fxml"></fx:include>
-   <HBox alignment="CENTER_RIGHT" prefHeight="455.0" prefWidth="942.0">
-      <children>
-         <TitledPane prefHeight="423.0" prefWidth="361.0" text="Paciente XXXXXXX">
-            <content>
-               <VBox alignment="BOTTOM_CENTER" prefHeight="200.0" prefWidth="100.0">
-                  <children>
-                     <TextArea fx:id="mensajesChat" prefHeight="367.0" prefWidth="338.0" />
-                     <HBox alignment="CENTER" prefHeight="33.0" prefWidth="341.0">
-                        <children>
-                           <TextField prefHeight="26.0" prefWidth="275.0" promptText="Ingresa un mensaje..." style="-fx-border-color: #0E4D92; -fx-border-radius: 10; -fx-background-radius: 10;">
-                              <HBox.margin>
-                                 <Insets right="10.0" />
-                              </HBox.margin>
-                           </TextField>
-                           <Button alignment="CENTER" mnemonicParsing="false" style="-fx-background-color: #0E4D92; -fx-border-radius: 10; -fx-background-radius: 10;" text="Enviar" textFill="WHITE">
-                              <font>
-                                 <Font name="System Bold" size="12.0" />
-                              </font></Button>
-                        </children>
-                     </HBox>
-                  </children>
-               </VBox>
-            </content>
-            <font>
-               <Font size="14.0" />
-            </font>
-         </TitledPane>
-      </children>
-      <padding>
-         <Insets left="20.0" right="20.0" />
-      </padding>
-   </HBox>
+    <fx:include source="chatDoctor.fxml"/>
 
 </VBox>
